--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
+    "angular-material": "^1.1.3",
     "angular-slick": "0.0.0",
     "body-parser": "^1.16.1",
     "cors": "^2.8.1",
